--- a/index.html
+++ b/index.html
@@ -124,37 +124,38 @@
 </head>
 <body>
     <div class="container">
-        <h1>⏰ Countdown Timer</h1>
-        <p class="target-date">February 28, 2026 at 01:05:00 AM GMT-4</p>
+        <h1>⏰ Contagem Regressiva</h1>
+        <h4>⏰ Quanto falta para eu ver meu amor.</h4>
+        <p class="target-date">28 de Fevereiro de 2026 - 01:05:00 AM GMT-4</p>
         
         <div class="countdown">
             <div class="time-unit">
                 <span class="time-value" id="months">0</span>
-                <span class="time-label">Months</span>
+                <span class="time-label">Meses</span>
             </div>
             <div class="time-unit">
                 <span class="time-value" id="weeks">0</span>
-                <span class="time-label">Weeks</span>
+                <span class="time-label">Semanas</span>
             </div>
             <div class="time-unit">
                 <span class="time-value" id="days">0</span>
-                <span class="time-label">Days</span>
+                <span class="time-label">Dias</span>
             </div>
             <div class="time-unit">
                 <span class="time-value" id="hours">0</span>
-                <span class="time-label">Hours</span>
+                <span class="time-label">Horas</span>
             </div>
             <div class="time-unit">
                 <span class="time-value" id="minutes">0</span>
-                <span class="time-label">Minutes</span>
+                <span class="time-label">Minutos</span>
             </div>
             <div class="time-unit">
                 <span class="time-value" id="seconds">0</span>
-                <span class="time-label">Seconds</span>
+                <span class="time-label">Segundos</span>
             </div>
         </div>
 
-        <p class="timezone-info">Timezone: GMT-4 (Atlantic Standard Time)</p>
+        <p class="timezone-info">(Horario de Cuiaba) GMT-4 (Atlantic Standard Time)</p>
     </div>
 
     <script>
