--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <body>
     <div class="container">
         <h1>⏰ Contagem Regressiva</h1>
-        <h4>⏰ Quanto falta para eu ver meu amor.</h4>
+        <h4>⏰ Quanto falta para pegar a Gabi de jeito.</h4>
         <p class="target-date">28 de Fevereiro de 2026 - 01:05:00 AM GMT-4</p>
         
         <div class="countdown">
